# kalman-folding

./: .#kalman-folding-09-008-in-C.org  .gitignore  EKFTuningDemo.nb  README.md  SOexample.c  algebra-cheat.org  bar.c  baz.c  foo.c  foooo.html  icremental-online-statistics-002.nb  incremental-online-statistics-002.nb  k-folding.c  kalman-folding-01-011-shorter.tex  kalman-folding-01-012-shorter.tex  kalman-folding-01-014.shorter.tex  kalman-folding-010-shorter.tex  kalman-folding-02-009-for-tracking.org  kalman-folding-02-009-for-tracking.tex  kalman-folding-03-008-derivations.org  kalman-folding-03-008-derivations.tex  kalman-folding-04-008-streams-observables.org  kalman-folding-04-008-streams-observables.tex  kalman-folding-04-009-streams-observables.org  kalman-folding-04-009-streams-observables.tex  kalman-folding-05-008-for-non-linear-problems.org  kalman-folding-05-008-for-non-linear-problems.tex  kalman-folding-06-008-non-dimensionalization.org  kalman-folding-06-008-non-dimensionalization.tex  kalman-folding-07-008-small-streams-library.org  kalman-folding-07-008-small-streams-library.tex  kalman-folding-09-008-in-C.C  kalman-folding-09-008-in-C.org  kalman-folding-09-008-in-C.tex  kalman-folding-derivations-008.org  kalman-folding-for-non-linear-problems.org  kalman-folding-for-tracking-008.org  kalman-folding-in-clojure.ipynb  kalman-folding-streams-observables-008.org  plan-for-papers.org  (+5 more)
C_CODE_PAPER_9/babyFold/: CMakeLists.txt  main.c
C_CODE_PAPER_9/kalmanSample/: CMakeLists.txt  build.sh  kalmanSample.c
blas/: Makefile  example.cpp
(+14 files in other folders)
